MVP just needs to have quality improved